--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@
 .day {
   border: 1px solid black;
   border-radius: 5px;
-  width: 20%;
+  width: 19%;
   height: 300px;
-  align: left;
+  float: left;
 }
