--- a/src/App.css
+++ b/src/App.css
@@ -28,9 +28,11 @@
 }
 
 .day {
-  border: 1px solid black;
+  border: 1px solid #0099e6;
+  background-color: #cceeff;
   border-radius: 5px;
-  width: 19%;
-  height: 300px;
+  width: 15%;
+  height: 250px;
   float: left;
+  margin-left: 20px;
 }
