--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 175px;
   padding: 20px;
   color: white;
 }
@@ -27,12 +27,13 @@
   to { transform: rotate(360deg); }
 }
 
-.day {
+.threeHourChunk{
   border: 1px solid #0099e6;
   background-color: #cceeff;
   border-radius: 5px;
-  width: 15%;
+  width: 11%;
   height: 250px;
   float: left;
-  margin-left: 20px;
+  margin-left: 15px;
+  margin-bottom: 15px;
 }
